--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/logos/logo_blush.png">
+    <link rel="icon" type="image/png" href="/logos/kandiegang_purplerain_logo.png">
     <title>Kandie Gang Cycling Club</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="index.css">
