Integrate Google Analytics into the application by adding tracking scripts in index.html and implementing page view tracking in the App component; update type definitions for global window object to include gtag function; enhance image handling in ExpandingHero component with width and height attributes for better performance; adjust Preloader component timing for smoother transitions.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/logos/kandiegang_purplerain_logo.png">
     <title>Kandie Gang Cycling Club</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Preload LCP hero image and key font for faster FCP/LCP -->
+    <link rel="preload" as="image" href="/images/250701_photosafari-12.webp">
+    <link rel="preload" as="font" type="font/woff2" href="/fonts/ivy-ora/IvyOraDispLight.woff2" crossorigin>
     <link rel="stylesheet" href="index.css">
 <script type="importmap">
 {
@@ -26,5 +28,13 @@
 <body class="text-slate-900">
     <div id="root"></div>
 <script type="module" src="/index.tsx"></script>
+    <!-- Google Analytics (deferred so it does not block rendering) -->
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){ dataLayer.push(arguments); }
+      gtag('js', new Date());
+      gtag('config', 'GT-5TJ2FPQ8');
+    </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=GT-5TJ2FPQ8"></script>
 </body>
 </html>
