--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/logos/kandiegang_purplerain_logo.png">
     <title>Kandie Gang Cycling Club</title>
-    <!-- Preload LCP hero image and key font for faster FCP/LCP -->
-    <link rel="preload" as="image" href="/images/250701_photosafari-12.webp">
-    <link rel="preload" as="font" type="font/woff2" href="/fonts/ivy-ora/IvyOraDispLight.woff2" crossorigin>
+    <!-- Preloads removed: image preload used .webp but dev uses .jpg (imageSrc); font/hero content paint after preloader so "not used within a few seconds" warnings. -->
     <link rel="stylesheet" href="index.css">
 <script type="importmap">
 {
