--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/logos/kandiegang_purplerain_logo.png">
-    <title>Kandie Gang Cycling Club</title>
+    <title>Kandie Gang Cycling Club  &#8211; Our mission to provide a safe space that brings FLINTA* and BIPOC closer to cycling culture</title>
     <!-- Preload critical fonts (heading + body) for faster first paint -->
     <link rel="preload" href="/fonts/ivy-ora/IvyOraDispRegular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/fonts/ivy-ora/IvyOraDispLight.woff2" as="font" type="font/woff2" crossorigin>
